adding support for OS

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,10 @@
           <artifactId>maven-cucumber-reporting</artifactId>
           <version>0.0.6</version>
       </dependency>
-
+	  <dependency>
+		  <groupId>com.google.guava</groupId>
+		  <artifactId>guava</artifactId>
+		  <version>21.0</version>
+	  </dependency>
 	</dependencies>
 </project>
